--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js",
-    "mock": "json-server -w -p 3030 mock.json"
+    "lint": "yarn lint:js"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
